--- a/requirements.txt
+++ b/requirements.txt
@@ -1,128 +1,33 @@
 anyio==3.6.1
-appdirs==1.4.3
-apt-clone==0.2.1
-apturl==0.5.2
-argcomplete==1.8.1
-argh==0.26.2
 asgiref==3.5.2
-backports.zoneinfo==0.2.1
-beautifulsoup4==4.8.2
-blessings==1.6
-blinker==1.4
-bpython==0.18
-Brlapi==0.7.0
-certifi==2019.11.28
-chardet==3.0.4
+autopep8==1.6.0
+certifi==2022.6.15
 charset-normalizer==2.0.12
-Click==7.0
-colorama==0.4.3
-command-not-found==0.3
-configobj==5.0.6
-cryptography==2.8
-cupshelpers==1.0
-curtsies==0.3.1
-dbus-python==1.2.16
-defer==1.0.6
-distlib==0.3.0
-distro==1.4.0
-Django==4.0.5
+click==8.1.3
 dnspython==2.2.1
 email-validator==1.2.1
-entrypoints==0.3
 fastapi==0.78.0
-filelock==3.0.12
-greenlet==0.4.15
-grpcio==1.16.1
 h11==0.13.0
-httplib2==0.14.0
 httptools==0.4.0
-idna==2.8
-ifaddr==0.1.6
-IMDbPY==6.8
-importlib-metadata==1.5.0
+idna==3.3
 itsdangerous==2.1.2
 Jinja2==3.1.2
-keyring==18.0.1
-launchpadlib==1.10.13
-lazr.restfulclient==0.14.2
-lazr.uri==1.0.3
-louis==3.12.0
-macaroonbakery==1.3.1
-Mako==1.1.0
 MarkupSafe==2.1.1
-more-itertools==4.2.0
-msgpack==0.6.2
-nemo-emblems==5.2.0
-netaddr==0.7.19
-netifaces==0.10.4
-oauthlib==3.1.0
-onboard==1.4.1
 orjson==3.7.2
-packaging==20.3
-PAM==0.4.2
-pathtools==0.1.2
-pexpect==4.6.0
-Pillow==7.0.0
-protobuf==3.6.1
-psutil==5.5.1
-pycairo==1.16.2
-pycrypto==2.6.1
-pycups==1.9.73
-pycurl==7.43.0.2
+pycodestyle==2.8.0
 pydantic==1.9.1
-Pygments==2.3.1
-PyGObject==3.36.0
-PyICU==2.4.2
-pyinotify==0.9.6
-PyJWT==1.7.1
-pymacaroons==0.13.0
-PyNaCl==1.3.0
-pynvim==0.4.1
-pyparsing==2.4.6
-pyparted==3.11.2
-pyRFC3339==1.1
-python-apt==2.0.0+ubuntu0.20.4.7
-python-debian===0.1.36ubuntu1
 python-dotenv==0.20.0
-python-magic==0.4.16
 python-multipart==0.0.5
-python-xapp==2.2.1
-python-xlib==0.23
-pytz==2019.3
-pyxdg==0.26
-PyYAML==5.3.1
-reportlab==3.5.34
+PyYAML==6.0
 requests==2.28.0
-requests-file==1.4.3
-requests-unixsocket==0.2.0
-SecretStorage==2.3.1
-setproctitle==1.1.10
-simplejson==3.16.0
-six==1.14.0
+six==1.16.0
 sniffio==1.2.0
-soupsieve==1.9.5
-SQLAlchemy==1.4.37
-sqlparse==0.4.2
 starlette==0.19.1
-systemd-python==234
-tinycss2==1.0.2
-tldextract==2.2.1
+toml==0.10.2
 typing-extensions==4.2.0
-ubuntu-drivers-common==0.0.0
-ufw==0.36
 ujson==5.3.0
-Unidecode==1.1.1
-urllib3==1.25.8
+urllib3==1.26.9
 uvicorn==0.17.6
 uvloop==0.16.0
-virtualenv==20.0.17
-wadllib==1.3.3
-watchdog==0.9.0
 watchgod==0.8.2
-wcwidth==0.1.8
-webencodings==0.5.1
 websockets==10.3
-xkit==0.0.0
-xlrd==1.1.0
-youtube-dl==2021.4.26
-zipp==1.0.0
