--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,15 @@
 anyio==3.6.1
 asgiref==3.5.2
 autopep8==1.6.0
+bcrypt==3.2.2
 certifi==2022.6.15
+cffi==1.15.1
 charset-normalizer==2.0.12
 click==8.1.3
 dnspython==2.2.1
 email-validator==1.2.1
 fastapi==0.78.0
+greenlet==1.1.2
 h11==0.13.0
 httptools==0.4.0
 idna==3.3
@@ -14,7 +17,9 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
 orjson==3.7.2
+passlib==1.7.4
 pycodestyle==2.8.0
+pycparser==2.21
 pydantic==1.9.1
 python-dotenv==0.20.0
 python-multipart==0.0.5
@@ -22,6 +27,7 @@ PyYAML==6.0
 requests==2.28.0
 six==1.16.0
 sniffio==1.2.0
+SQLAlchemy==1.4.39
 starlette==0.19.1
 toml==0.10.2
 typing-extensions==4.2.0
