--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ cffi==1.15.1
 charset-normalizer==2.0.12
 click==8.1.3
 dnspython==2.2.1
+ecdsa==0.17.0
 email-validator==1.2.1
 fastapi==0.78.0
 greenlet==1.1.2
@@ -18,13 +19,16 @@ Jinja2==3.1.2
 MarkupSafe==2.1.1
 orjson==3.7.2
 passlib==1.7.4
+pyasn1==0.4.8
 pycodestyle==2.8.0
 pycparser==2.21
 pydantic==1.9.1
 python-dotenv==0.20.0
+python-jose==3.3.0
 python-multipart==0.0.5
 PyYAML==6.0
 requests==2.28.0
+rsa==4.8
 six==1.16.0
 sniffio==1.2.0
 SQLAlchemy==1.4.39
